delete ; in top right of page

--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
   <script src="data.js"></script>
   <link href="style.css" rel="stylesheet" />
   <!-- <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet">; -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>;
-  <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js">;
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js">
   </script>
   <style>
 
