Add gradint to main text icons

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <h1>سامانه مرجع استاندارد ها</h1>
+  <h1 id="main_text">سامانه مرجع استاندارد ها</h1>
 
   <footer>
     <div>BNP Developer Group</div>
